fixed display content (height:600) on mobile view

--- a/divi-child/src/scss/_wink-accordion-fullwidth.scss
+++ b/divi-child/src/scss/_wink-accordion-fullwidth.scss
@@ -20,7 +20,7 @@
                 padding-left: 10vw;
                 padding-right: 55vw;
                 padding-top: 35px;
-                min-height: 600px;
+                height: 600px;
 
                 @include diviBreakpoint(1100) {
                   padding: 30px;
